# xplane-dotnet

./: LICENSE  README.md
host/: CMakeLists.txt  CMakeSettings.json
host/sim/: CMakeLists.txt  main.cpp
host/sim_xplm/: CMakeLists.txt  XPLMPlugin.cpp  XPLMUtilities.cpp
host/xphost/: CMakeLists.txt  clrhost.cpp  clrhost.h  platform.h  platform.unix.cpp  platform.win.cpp  proxy.cpp  proxy.h  xphost.cpp  xphost.h
samples/: Samples.sln
samples/.config/: dotnet-tools.json
samples/AudioHelpers/: AudioHelpers.projitems  AudioHelpers.shproj  WavHelper.cs
samples/HelloWorld/: HelloWorld.csproj  Plugin.cs
samples/MenuSample/: MenuSample.csproj  Plugin.cs
samples/OpenALPrivateOpenToolkit/: OpenALPrivateOpenToolkit.csproj  Plugin.cs
samples/OpenALPrivateSilkNet/: OpenALPrivateSilkNet.csproj  Plugin.cs
samples/OpenALSharedOpenToolkit/: OpenALSharedOpenToolkit.csproj  Plugin.cs
samples/OpenALSharedSilkNet/: OpenALSharedSilkNet.csproj  Plugin.cs
samples/WidgetsSample/: Plugin.cs  WidgetsSample.csproj
samples/WindowSample/: Plugin.cs  WindowSample.csproj
samples/WindowSampleOpenToolkit/: Plugin.cs  WindowSampleOpenToolkit.csproj
samples/WindowSampleSilkNet/: Plugin.cs  WindowSampleSilkNet.csproj
src/: XP.SDK.sln  build-packages.ps1
src/XP.HelloWorld/: Plugin.cs  XP.HelloWorld.csproj
src/XP.Proxy/: Delegates.cs  InitializeParameters.cs  PluginContext.cs  PluginProxy.cs  StartParameters.cs  XP.Proxy.csproj
src/XP.Proxy/Properties/: launchSettings.json
src/XP.SDK/: AssemblyInfo.cs  BooleanExtensions.cs  DelegateWrapper.cs  FunctionResolver.cs  GlobalContext.cs  Guard.cs  ManagedTypeAttribute.cs  PluginAttribute.cs  PluginBase.cs  RGBColor.cs  Rect.cs  RectF.cs  Size.cs  StructEventHandlers.cs  Utf8String.cs  Utf8StringBuilder.cs  Utf8StringBuilderFactory.cs  Utf8StringFormatAttribute.cs  Utf8StringLiteralAttribute.cs  Utf8StringScope.cs  Utils.StrLen.cs  Utils.StrNLen.cs  Utils.cs  XP.SDK.csproj  XP.SDK.xml
src/XP.SDK.Analyzers/XP.SDK.Analyzers/: Extensions.cs  IsExternalInit.cs  Resources.Designer.cs  StringBuilderExtensions.cs  Utf8StringFormatGenerator.cs  Utf8StringLiteralAnalyzer.cs  Utf8StringLiteralGenerator.cs  Utf8StringOverloadAnalyzer.cs  XP.SDK.Analyzers.csproj  XPSDKAnalyzersAnalyzer.cs
src/XP.SDK.Analyzers/XP.SDK.Analyzers.CodeFixes/: CodeFixResources.Designer.cs  Rule8001CodeFixProvider.cs  Rule8002CodeFixProvider.cs  Utf8StringLiteralCodeFixProvider.cs  XP.SDK.Analyzers.CodeFixes.csproj  XPSDKAnalyzersCodeFixProvider.cs
src/XP.SDK.Analyzers/XP.SDK.Analyzers.Package/: XP.SDK.Analyzers.Package.csproj
src/XP.SDK.Analyzers/XP.SDK.Analyzers.Test/: XP.SDK.Analyzers.Test.csproj  XPSDKAnalyzersUnitTests.cs
src/XP.SDK.Analyzers/XP.SDK.Analyzers.Vsix/: XP.SDK.Analyzers.Vsix.csproj  source.extension.vsixmanifest
src/XP.SDK.OpenTK.Graphics/: OpenGLBindingsContext.cs  XP.SDK.OpenTK.Graphics.csproj  XP.SDK.OpenTK.Graphics.xml
src/XP.SDK.OpenToolkit.Graphics/: OpenGLBindingsContext.cs  XP.SDK.OpenToolkit.Graphics.csproj  XP.SDK.OpenToolkit.Graphics.xml
src/XP.SDK.Silk.NET/: OpenALNativeContext.cs  OpenCLNativeContext.cs  OpenGLNativeContext.cs  SymbolLoader.cs  VulcanNativeContext.cs  XP.SDK.OpenToolkit.Graphics.xml  XP.SDK.Silk.NET.csproj
src/XP.SDK/Buffers/: ArrayPoolBufferWriter.cs  CompletableArrayBufferWriter.cs  IBufferAccessor.cs  ICompletableBufferWriter.cs  MemoryPoolBufferWriter.cs
src/XP.SDK/Text/: IUtf8Formattable.cs  NewLineSequence.cs  SupportedFormatAttribute.cs  Utf8StringBuilder.cs  Utf8StringBuilderExtensions.cs  Utf8StringBuilderFactory.cs
src/XP.SDK/Threading/: FlightLoopCallbackQueue.cs  FlightLoopSynchronizationContext.cs  ICallbackQueue.cs
src/XP.SDK/Widgets/: Behavior.cs  BehaviorCollection.cs  Button.cs  ButtonBehavior.Generated.cs  ButtonMessage.Generated.cs  ButtonProperty.Generated.cs  ButtonType.Generated.cs  Caption.cs  CaptionProperty.Generated.cs  CheckBox.cs  CustomWidget.cs  CustomWidgetEx.cs  DispatchMode.Generated.cs  ElementStyle.Generated.cs  EventHandlers.cs  GeneralGraphics.cs  GeneralGraphicsProperty.Generated.cs  GeneralGraphicsType.Generated.cs  IWidgetCollection.cs  MainWindow.cs  MainWindowMessage.Generated.cs  MainWindowProperty.Generated.cs  MainWindowType.Generated.cs  ProgressBar.cs  ProgressBarProperty.Generated.cs  PushButton.cs  RadioButton.cs  ScrollBar.cs  ScrollBarMessage.Generated.cs  ScrollBarProperty.Generated.cs  ScrollBarType.Generated.cs  StandardWidget.cs  SubWindow.cs  SubWindowProperty.Generated.cs  SubWindowType.Generated.cs  TextField.cs  TextFieldMessage.Generated.cs  TextFieldProperty.Generated.cs  TextFieldType.Generated.cs  TrackStyle.Generated.cs  (+7 more)
src/XP.SDK/XPLM/: Aircraft.cs  Camera.cs  CameraControlDuration.Generated.cs  Command.cs  CommandAfterExecuteEventArgs.cs  CommandBeforeExecuteEventArgs.cs  CommandButtonID.Generated.cs  CommandExecutionScope.cs  CommandKeyID.Generated.cs  CommandPhase.Generated.cs  CommandRef.Generated.cs  CommandRef.cs  CursorRequestEventArgs.cs  CursorStatus.Generated.cs  DataFileType.Generated.cs  DataRef.Generated.cs  DataRef.cs  DataRefProvider.cs  DataTypeID.Generated.cs  DrawingPhase.Generated.cs  FMS.cs  Features.cs  FlightLoop.cs  FlightLoopID.Generated.cs  FlightLoopPhaseType.Generated.cs  FontID.Generated.cs  Graphics.cs  HostApplicationID.Generated.cs  HotKey.cs  HotKeyID.Generated.cs  Instance.cs  InstanceRef.Generated.cs  KeyEventArgs.cs  KeyFlags.Generated.cs  KeySniffer.cs  LanguageCode.Generated.cs  MagneticVariation.cs  Map.cs  MapLayer.cs  MapLayerCreationFailedException.cs  (+42 more)
src/XP.SamplePlugin/: Plugin.cs  XP.SamplePlugin.csproj
tools/: Tools.sln
tools/BindingsGenerator/: Annotations.cs  BindingsGenerator.csproj  BuilderBase.cs  CppExtensions.cs  DelegateBuilder.cs  EnumBuilder.cs  FunctionBuilder.cs  HandleBuilder.cs  Log.cs  Program.cs  StructBuilder.cs  SyntaxBuilder.cs  SyntaxExtensions.cs  TypeBuilderBase.cs  TypeInfo.cs  TypeMap.cs
tools/BindingsGenerator/Properties/: launchSettings.json
tools/XP.Tool/: Platform.cs  Program.cs  XP.Tool.csproj
tools/XP.Tool/Commands/: Publish.cs
(+195 files in other folders)
